# awful

math/: pyproject.toml
math/math/: main.py
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: programm.py
