[tool.poetry]
name = "math"
version = "0.1.0"
description = ""
authors = ["twentymanty <garaevbulat24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'math.main:start'
